Fix dark mode textarea color

--- a/src/css/webapp.scss
+++ b/src/css/webapp.scss
@@ -61,6 +61,7 @@ body {
       font-family: monospace;
       font-size: 1rem;
       background: var(--grey-4);
+      color: var(--black);
     }
   }
 
